; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_pg_locale.c_struct_lconv_is_valid.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_pg_locale.c_struct_lconv_is_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lconv = type { i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lconv*)* @struct_lconv_is_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @struct_lconv_is_valid(%struct.lconv* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.lconv*, align 8
  store %struct.lconv* %0, %struct.lconv** %3, align 8
  %4 = load %struct.lconv*, %struct.lconv** %3, align 8
  %5 = getelementptr inbounds %struct.lconv, %struct.lconv* %4, i32 0, i32 9
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %64

9:                                                ; preds = %1
  %10 = load %struct.lconv*, %struct.lconv** %3, align 8
  %11 = getelementptr inbounds %struct.lconv, %struct.lconv* %10, i32 0, i32 8
  %12 = load i32*, i32** %11, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %64

15:                                               ; preds = %9
  %16 = load %struct.lconv*, %struct.lconv** %3, align 8
  %17 = getelementptr inbounds %struct.lconv, %struct.lconv* %16, i32 0, i32 7
  %18 = load i32*, i32** %17, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %64

21:                                               ; preds = %15
  %22 = load %struct.lconv*, %struct.lconv** %3, align 8
  %23 = getelementptr inbounds %struct.lconv, %struct.lconv* %22, i32 0, i32 6
  %24 = load i32*, i32** %23, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %21
  store i32 0, i32* %2, align 4
  br label %64

27:                                               ; preds = %21
  %28 = load %struct.lconv*, %struct.lconv** %3, align 8
  %29 = getelementptr inbounds %struct.lconv, %struct.lconv* %28, i32 0, i32 5
  %30 = load i32*, i32** %29, align 8
  %31 = icmp eq i32* %30, null
  br i1 %31, label %32, label %33

32:                                               ; preds = %27
  store i32 0, i32* %2, align 4
  br label %64

33:                                               ; preds = %27
  %34 = load %struct.lconv*, %struct.lconv** %3, align 8
  %35 = getelementptr inbounds %struct.lconv, %struct.lconv* %34, i32 0, i32 4
  %36 = load i32*, i32** %35, align 8
  %37 = icmp eq i32* %36, null
  br i1 %37, label %38, label %39

38:                                               ; preds = %33
  store i32 0, i32* %2, align 4
  br label %64

39:                                               ; preds = %33
  %40 = load %struct.lconv*, %struct.lconv** %3, align 8
  %41 = getelementptr inbounds %struct.lconv, %struct.lconv* %40, i32 0, i32 3
  %42 = load i32*, i32** %41, align 8
  %43 = icmp eq i32* %42, null
  br i1 %43, label %44, label %45

44:                                               ; preds = %39
  store i32 0, i32* %2, align 4
  br label %64

45:                                               ; preds = %39
  %46 = load %struct.lconv*, %struct.lconv** %3, align 8
  %47 = getelementptr inbounds %struct.lconv, %struct.lconv* %46, i32 0, i32 2
  %48 = load i32*, i32** %47, align 8
  %49 = icmp eq i32* %48, null
  br i1 %49, label %50, label %51

50:                                               ; preds = %45
  store i32 0, i32* %2, align 4
  br label %64

51:                                               ; preds = %45
  %52 = load %struct.lconv*, %struct.lconv** %3, align 8
  %53 = getelementptr inbounds %struct.lconv, %struct.lconv* %52, i32 0, i32 1
  %54 = load i32*, i32** %53, align 8
  %55 = icmp eq i32* %54, null
  br i1 %55, label %56, label %57

56:                                               ; preds = %51
  store i32 0, i32* %2, align 4
  br label %64

57:                                               ; preds = %51
  %58 = load %struct.lconv*, %struct.lconv** %3, align 8
  %59 = getelementptr inbounds %struct.lconv, %struct.lconv* %58, i32 0, i32 0
  %60 = load i32*, i32** %59, align 8
  %61 = icmp eq i32* %60, null
  br i1 %61, label %62, label %63

62:                                               ; preds = %57
  store i32 0, i32* %2, align 4
  br label %64

63:                                               ; preds = %57
  store i32 1, i32* %2, align 4
  br label %64

64:                                               ; preds = %63, %62, %56, %50, %44, %38, %32, %26, %20, %14, %8
  %65 = load i32, i32* %2, align 4
  ret i32 %65
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
